[tool.poetry]
name = "detextify"
version = "0.1.9"
description = ""
authors = ["Julia <turc.raluca@gmail.com>", "Mihail <mihail911@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
absl-py = "^1.3.0"
azure-cognitiveservices-vision-computervision = "^0.9.0"
openai = "^0.25.0"
requests = "^2.28.1"
replicate = "^0.4.0"
pillow = "^9.3.0"
torch = "^1.13.0"
diffusers = "^0.10.2"
transformers = "^4.25.1"
accelerate = "^0.15.0"
pytesseract = "^0.3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
